--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <div class="arti">
           <h1 class="title" id="work">Work</h1>
           <div class="para">
-            <img class="work-cat" src="cat.png" alt="cat" />
+            <img class="work-cat" src="bark-woof.png" alt="cat" />
             <div id="cat">
-              <h2>Surf Report</h2>
-              <h4>MERN Stack</h4>
+              <h2>Woof-Bark</h2>
+              <h4>API Dog Search</h4>
             </div>
             <div class="work-other">
               <div class="other">
